[package]
name = "iran-proxy-security"
version = "0.1.0"
edition = "2021"
authors = ["Iran-Proxy-Unified Contributors"]
description = "Advanced DPI bypass and anti-detection module for Iran proxy system"

[lib]
name = "iran_proxy_security"
path = "src/lib.rs"

[[bin]]
name = "security_worker"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
bytes = "1.5"
async-trait = "0.1"
parking_lot = "0.12"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Networking
quinn = "0.11"
quinn-proto = "0.11"
rustls = "0.22"
rustls-pemfile = "2.0"

# HTTP/HTTPS
hyper = "1.0"
hyper-util = "0.1"
http = "1.0"
http-body-util = "0.1"

# Performance
criterion = "0.5"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "pattern_rotation"
harness = false

[[bench]]
name = "obfuscation"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
